Fix the causes instead of suppressing the warnings